--- a/SolutionMisOfertas/MisOfertas.Web/Views/Home/Index.cshtml
+++ b/SolutionMisOfertas/MisOfertas.Web/Views/Home/Index.cshtml
@@ -35,7 +35,7 @@
 </body>
 </html>
 
-<h1 class="text-center">MIS OFERTAS</h1>
+<img class="text-center" src="~/Images/bbar.png" width="310" height="70" />
 <hr />
 <div class="row">
     <div class="col-md-4">
