Cambios en los diseños de home

--- a/SolutionMisOfertas/MisOfertas.Web/Views/Account/Login.cshtml
+++ b/SolutionMisOfertas/MisOfertas.Web/Views/Account/Login.cshtml
@@ -14,7 +14,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!------ Include the above in your HEAD tag ---------->
 </head>
-<body id="LoginForm">
+<body id="LoginForm" class="table-responsive">
     <div class="container table-responsive">
         <h1 class="form-heading">login Form</h1>
         <div class="login-form">
