Se agregaron en primera instancia validaciones a cada campo en el registro de Usuario. Despues de las validaciones se añadio la funcionalidad de filtrado de productos en ofertas en Home/Index.cshtml.

--- a/SolutionMisOfertas/MisOfertas.Web/Views/Account/Login.cshtml
+++ b/SolutionMisOfertas/MisOfertas.Web/Views/Account/Login.cshtml
@@ -29,11 +29,11 @@
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <form id="Login">
                         <div class="form-group">
-                            @Html.TextBoxFor(m => m.User, new { @class = "form-control", id = "inputEmail", placeholder = "Username" })
+                            @Html.TextBoxFor(m => m.User, new { @class = "form-control", id = "inputEmail", placeholder = "Username", @maxlength = "25" })
                             @Html.ValidationMessageFor(m => m.User, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group">
-                            @Html.PasswordFor(m => m.Pass, new { @class = "form-control", id = "inputPassword", placeholder = "Password"})
+                            @Html.PasswordFor(m => m.Pass, new { @class = "form-control", id = "inputPassword", placeholder = "Password", @maxlength = "45" })
                             @Html.ValidationMessageFor(m => m.Pass, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group forgot">
